# parallel-raytracer

./: .gitignore  CMakeLists.txt  README.md
report/: Report.tex
src/: CMakeLists.txt  main.cpp
src/math/: vec.h
src/models/: cornell_box.mat  cornell_box.mtl
src/models/cornell/: CornellBox-Empty-CO.mtl  CornellBox-Empty-Squashed.mtl  CornellBox-Empty-White.mtl  CornellBox-Glossy-Floor.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl
src/scene/: camera.h  ray_triangle.cpp  ray_triangle.h  scene.h  sceneloader.cpp  sceneloader.h  tiny_obj_loader.h
